<resources>
    <string name="app_name">trialio</string>
    <string name="experiment_action_subscribe">Subscribe</string>
    <string name="experiment_action_unsubscribe">Unsubscribe</string>
    <string name="search_experiment_placeholder">Search</string>
    <string name="view_user_username">Username</string>
    <string name="view_user_phone">(000) 000-0000</string>
    <string name="view_user_email">email@email.com</string>
    <string name="experiment_status_open">OPEN</string>
    <string name="experiment_status_closed">CLOSED</string>
    <string name="phone_label">Phone Number:</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email</string>
    <string name="edit_contact_info">Edit Contact Info</string>
    <string name="change_username">Change Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exp_owner_label_inline">Owner: %1$s</string>
    <string name="trials_list_heading">Trials</string>
    <string name="trials_activity_heading">Experiment Trials</string>
</resources>