<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"


        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/section_grey"
            android:padding="10dp"
            android:scaleType="fitCenter" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:backgroundTint="@color/section_grey"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/temp_logo" />


        <ImageButton
            android:id="@+id/editUserBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/section_grey"
            android:padding="10dp"
            android:scaleType="fitCenter" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:background="@color/section_grey"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/special_yellow"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:text="@string/username_label"
                android:textColor="@color/button_dark_grey"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="@color/button_dark_grey"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:background="@color/section_grey"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/special_yellow"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:text="@string/phone_label"
                android:textColor="@color/button_dark_grey"
                android:textSize="14sp">

            </TextView>

            <TextView

                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="@color/button_dark_grey"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:background="@color/section_grey"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_trial_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/special_yellow"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:text="@string/email_label"
                android:textColor="@color/button_dark_grey"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="@color/button_dark_grey"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        android:gravity="bottom">

        <Button
            android:id="@+id/changeUsernameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/special_yellow"
            android:gravity="center_horizontal"
            android:text="@string/change_username"
            android:textColor="@color/button_dark_grey"
            android:visibility="invisible" />

        <Button
            android:id="@+id/editContactInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/special_yellow"
            android:gravity="center_horizontal"
            android:text="@string/edit_contact_info"
            android:textColor="@color/button_dark_grey"
            android:visibility="invisible" />
    </LinearLayout>


</LinearLayout>